--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./src/css/material.css">
-    <link rel="stylesheet" href="./src/css/animate.css">
-    <link rel="stylesheet" href="./src/css/styles.css">
+    <link rel="stylesheet" href="src/css/material.css">
+    <link rel="stylesheet" href="src/css/animate.css">
+    <link rel="stylesheet" href="src/css/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
       <!-- pace.js -->
-    <script src="./src/js/pace.js"></script>
+    <script src="src/js/pace.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./src/css/pace_flash.css">
+    <link rel="stylesheet" type="text/css" href="src/css/pace_flash.css">
     </head>
     <body class="mdl-head mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
       <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -118,25 +118,25 @@
                 <div class="mdl-card__supporting-text">
                   <ul class="specList">
                     <li>
-                      <h6><img class="specImg" alt="Linux version 3.16.0-4-amd64 (debian-kernel@lists.debian.org) (gcc version 4.8.4 (Debian 4.8.4-1) )" src="./src/images/debian.png">Debian GNU/Linux 8 (jessie)</h6>
+                      <h6><img class="specImg" alt="Linux version 3.16.0-4-amd64 (debian-kernel@lists.debian.org) (gcc version 4.8.4 (Debian 4.8.4-1) )" src="src/images/debian.png">Debian GNU/Linux 8 (jessie)</h6>
                     </li>
                     <li>
-                      <h6><img class="specImg" src="./src/images/cpu.svg">Intel Core i7-3770</h6>
+                      <h6><img class="specImg" src="src/images/cpu.svg">Intel Core i7-3770</h6>
                     </li>
                     <li>
-                      <h6><img class="specImg" src="./src/images/hdd.svg">2x HDD 3,0 TB SATA</h6>
+                      <h6><img class="specImg" src="src/images/hdd.svg">2x HDD 3,0 TB SATA</h6>
                     </li>
                     <li>
-                      <h6><img class="specImg" src="./src/images/ram.svg">2x RAM 8192 MB DDR3</h6>
+                      <h6><img class="specImg" src="src/images/ram.svg">2x RAM 8192 MB DDR3</h6>
                     </li>
                     <li>
-                      <h6><img class="specImg" src="./src/images/lan.png">1GBPS connection</h6>
+                      <h6><img class="specImg" src="src/images/lan.png">1GBPS connection</h6>
                     </li>
                     <li>
-                      <h6><img class="specImg" src="./src/images/jenkins.png">Jenkins Support</h6>
+                      <h6><img class="specImg" src="src/images/jenkins.png">Jenkins Support</h6>
                     </li>
                     <li>
-                      <h6><img class="specImg" src="./src/images/ssh.png">SSH access</h6>
+                      <h6><img class="specImg" src="src/images/ssh.png">SSH access</h6>
                     </li>
                   </ul>
                 </div>
@@ -767,7 +767,7 @@
           </div>
         </main>
       </div>
-    <script src="./src/js/material.min.js"></script>
+    <script src="src/js/material.min.js"></script>
     <script>
       $('.mdl-card').addClass('animated fadeIn');
     </script>
