Update Server Configs

--- a/index.html
+++ b/index.html
@@ -110,38 +110,196 @@
           <div class="mdl-layout__tab-panel" id="technology">
             <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">
             </header>
-            <section class="section--center mdl-grid mdl-grid--no-spacing">
-              <div class="mdl-card mdl-shadow--2dp mdl-card-square">
-                <div class="mdl-card__title mdl-card--expand">
-                  <h2 class="mdl-card__title-text">Server #1</h2>
-                </div>
-                <div class="mdl-card__supporting-text">
-                  <ul class="specList">
-                    <li>
-                      <h6><img class="specImg" alt="Linux version 3.16.0-4-amd64 (debian-kernel@lists.debian.org) (gcc version 4.8.4 (Debian 4.8.4-1) )" src="src/images/debian.png">Debian GNU/Linux 8 (jessie)</h6>
-                    </li>
-                    <li>
-                      <h6><img class="specImg" src="src/images/cpu.svg">Intel Core i7-3770</h6>
-                    </li>
-                    <li>
-                      <h6><img class="specImg" src="src/images/hdd.svg">2x HDD 3,0 TB SATA</h6>
-                    </li>
-                    <li>
-                      <h6><img class="specImg" src="src/images/ram.svg">2x RAM 8192 MB DDR3</h6>
-                    </li>
-                    <li>
-                      <h6><img class="specImg" src="src/images/lan.png">1GBPS connection</h6>
-                    </li>
-                    <li>
-                      <h6><img class="specImg" src="src/images/jenkins.png">Jenkins Support</h6>
-                    </li>
-                    <li>
-                      <h6><img class="specImg" src="src/images/ssh.png">SSH access</h6>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </section>
+            <dl>
+
+              <dt>The Godfather</dt>
+              <dd>
+                <section class="section--center mdl-grid mdl-grid--no-spacing">
+                  <div class="mdl-card mdl-shadow--2dp mdl-card-square">
+                    <div class="mdl-card__title mdl-card--expand">
+                      <h2 class="mdl-card__title-text">Server #1</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                      <div id="godfather" class="mdl-progress mdl-js-progress serverprogress"><span class="serverprogress-supporting">10/10 slots in use</span></div><br>
+                      <ul class="specList">
+                        <li>
+                          <h6><img class="specImg" alt="" src="src/images/arch.png">Arch linux</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/cpu.svg">Intel(R) Core(TM) i7-3770 CPU @ 3.40GHz</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/hdd.svg">2x HDD (Western Digital Re 3TB Datacenter & TOSHIBA DT01ACA300 3TB)</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/ram.svg">4x Kingston 4096 MB DDR3 DIMM Synchronous 1333 MHz</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" alt="Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller (rev 09)" src="src/images/lan.png">1GbPS connection</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/jenkins.png">Jenkins Support</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/ssh.png">SSH access</h6>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </section>
+              </dd>
+
+              <dt>The Speedhorn</dt>
+              <dd>
+                <section class="section--center mdl-grid mdl-grid--no-spacing">
+                  <div class="mdl-card mdl-shadow--2dp mdl-card-square">
+                    <div class="mdl-card__title mdl-card--expand">
+                      <h2 class="mdl-card__title-text">Server #2</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                      <div id="speedhorn" class="mdl-progress mdl-js-progress serverprogress"><span class="serverprogress-supporting">10/10 slots in use</span></div><br>
+                      <ul class="specList">
+                        <li>
+                          <h6><img class="specImg" alt="Linux version 3.16.0-4-amd64 (debian-kernel@lists.debian.org) (gcc version 4.8.4 (Debian 4.8.4-1) )" src="src/images/debian.png">Debian GNU/Linux 8 (jessie)</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/cpu.svg">Intel(R) Core(TM) i7-3770 CPU @ 3.40GHz</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/hdd.svg">2x TOSHIBA DT01ACA300 3TB</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/ram.svg">4x Kingston 8192 MB DDR3 DIMM Synchronous 1600 MHz</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" alt="Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller (rev 09)" src="src/images/lan.png">1GbPS connection</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/jenkins.png">Jenkins Support</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/ssh.png">SSH access</h6>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </section>
+              </dd>
+
+              <dt>The Scorpion</dt>
+              <dd>
+                <section class="section--center mdl-grid mdl-grid--no-spacing">
+                  <div class="mdl-card mdl-shadow--2dp mdl-card-square">
+                    <div class="mdl-card__title mdl-card--expand">
+                      <h2 class="mdl-card__title-text">Server #3</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                      <div id="scorpion" class="mdl-progress mdl-js-progress serverprogress"><span class="serverprogress-supporting">9/10 slots in use</span></div><br>
+                      <ul class="specList">
+                        <li>
+                          <h6><img class="specImg" alt="Linux version 3.16.0-4-amd64 (debian-kernel@lists.debian.org) (gcc version 4.8.4 (Debian 4.8.4-1) )" src="src/images/debian.png">Debian GNU/Linux 8 (jessie)</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/cpu.svg">Intel(R) Core(TM) i7-3770 CPU @ 3.40GHz</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/hdd.svg">2x TOSHIBA DT01ACA300 3TB</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/ram.svg">4x Kingston 8192 MB DDR3 DIMM Synchronous 1600 MHz</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" alt="Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller (rev 09)" src="src/images/lan.png">1GbPS connection</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/jenkins.png">Jenkins Support</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/ssh.png">SSH access</h6>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </section>
+              </dd>
+              
+              <dt>The Memripper</dt>
+              <dd>
+                <section class="section--center mdl-grid mdl-grid--no-spacing">
+                  <div class="mdl-card mdl-shadow--2dp mdl-card-square">
+                    <div class="mdl-card__title mdl-card--expand">
+                      <h2 class="mdl-card__title-text">Server #4</h2>
+                      <img class="aicp" alt="" src="src/images/aicp.png">
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                      <div id="memripper" class="mdl-progress mdl-js-progress serverprogress"><span class="serverprogress-supporting">1/1 slots in use</span></div><br>
+                      <ul class="specList">
+                        <li>
+                          <h6><img class="specImg" alt="Linux version 3.16.0-4-amd64 (debian-kernel@lists.debian.org) (gcc version 4.8.4 (Debian 4.8.4-1) )" src="src/images/debian.png">Debian GNU/Linux 8 (jessie)</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/cpu.svg">Intel(R) Core(TM) i7-3770 CPU @ 3.40GHz</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/hdd.svg">2x TOSHIBA DT01ACA300 3TB</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/ram.svg">4x Kingston 8192 MB DDR3 DIMM Synchronous 1600 MHz</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" alt="Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller (rev 09)" src="src/images/lan.png">1GbPS connection</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/jenkins.png">Jenkins Support</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/ssh.png">SSH access</h6>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </section>
+              </dd>
+
+              <dt>The Fury</dt>
+              <dd>
+                <section class="section--center mdl-grid mdl-grid--no-spacing">
+                  <div class="mdl-card mdl-shadow--2dp mdl-card-square">
+                    <div class="mdl-card__title mdl-card--expand">
+                      <h2 class="mdl-card__title-text">Server #5</h2>
+                      <img class="aicp" alt="" src="src/images/aicp.png">
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                      <div id="fury" class="mdl-progress mdl-js-progress serverprogress"><span class="serverprogress-supporting">1/1 slots in use</span></div><br>
+                      <ul class="specList">
+                        <li>
+                          <h6><img class="specImg" alt="Linux version 3.16.0-4-amd64 (debian-kernel@lists.debian.org) (gcc version 4.8.4 (Debian 4.8.4-1) )" src="src/images/debian.png">Debian GNU/Linux 8 (jessie)</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/cpu.svg">Intel(R) Core(TM) i7-3770 CPU @ 3.40GHz</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/hdd.svg">2x TOSHIBA DT01ACA300 3TB</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/ram.svg">4x Kingston 8192 MB DDR3 DIMM Synchronous 1600 MHz</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" alt="Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller (rev 09)" src="src/images/lan.png">1GbPS connection</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/jenkins.png">Jenkins Support</h6>
+                        </li>
+                        <li>
+                          <h6><img class="specImg" src="src/images/ssh.png">SSH access</h6>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </section>
+              </dd>
+
+            </dl>
             <section class="section--footer mdl-color--white mdl-grid">
             </section>
           </div>
@@ -774,7 +932,6 @@
     <script type="text/javascript"> 
       (function (){
         $('dd').filter(':nth-child(n+4)').addClass('hide')
-
         $('dl').on('mouseover', 'dt', function(){
           $(this)
             .next()
@@ -782,8 +939,24 @@
               .siblings('dd')
                 .slideUp(200);
         });
-
       })(); 
+    </script>
+    <script>
+      document.querySelector('#godfather').addEventListener('mdl-componentupgraded', function() {
+        this.MaterialProgress.setProgress(100);
+      });
+      document.querySelector('#speedhorn').addEventListener('mdl-componentupgraded', function() {
+        this.MaterialProgress.setProgress(100);
+      });
+      document.querySelector('#scorpion').addEventListener('mdl-componentupgraded', function() {
+        this.MaterialProgress.setProgress(90);
+      });
+      document.querySelector('#memripper').addEventListener('mdl-componentupgraded', function() {
+        this.MaterialProgress.setProgress(100);
+      });
+      document.querySelector('#fury').addEventListener('mdl-componentupgraded', function() {
+        this.MaterialProgress.setProgress(100);
+      });
     </script>
   </body>
 </html>
