index: update descriptions and add cards
Signed-off-by: Deepak Sharma <TechExhibeo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -53,10 +53,22 @@
     
               <div class="mdl-card mdl-cell mdl-cell--12-col-desktop mdl-cell--8-col-tablet mdl-cell--6-col-phone">
                 <div class="mdl-card__supporting-text">
-                  <h4>About Us</h4>
+                  <h4>About Legacy Server</h4>
                     Legacy Server is a prominent Organization in the Aftermarket Android side of the world.<br><br>
                     We Help create great things, support multiple ROM organizations and offer our services of Linux Servers, Gerrit hosts, and Jenkins providers for dozens of people all over the globe <br><br>
                 </div>
+              </div>
+            </section>
+            <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+    
+              <div class="mdl-card mdl-cell mdl-cell--12-col-desktop mdl-cell--8-col-tablet mdl-cell--6-col-phone">
+                <div class="mdl-card__supporting-text">
+                  <h4>About Legacy Team</h4>
+				    We are the Team of normal people around the diffrent corners of Earth. Android brought us together and we formed the "Legacy Team".<br><br>
+					Legacy Team had a passion and love for Android and they started to contribute the community in one or anotherway.<br><br>
+					Team decided to help the beginners who want to learn about Android Compliation and ROM Cooking but they cannot start due to their low Desktop/Laptop Specifications and slow or low Bandwidth of Internet.<br><br>
+					We brought up the Legacy Servers for the Community with the best services available in market.<br><br>
+                    </div>
               </div>
             </section>
             <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
@@ -68,15 +80,15 @@
 
                   </div>
                   <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-                    <h5>Users</h5>
-                    Know more about the people using Legacy server at <a href="#">Users tab</a>.
+                    <h5>Legacy Team</h5>
+                    Know more about the people in Legacy Team at <a href="#">Legacy Team tab</a>.
                   </div>
                   <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
                     <div class="section__circle-container__circle mdl-color--primary"></div>
                   </div>
                   <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-                    <h5>Lorem ipsum dolor sit amet</h5>
-                    Know more about the people who made Legacy server possible at <a href="#">Contributors tab</a>.
+                    <h5>Contributors</h5>
+                    Know more about the people who helped and made Legacy Server possible at <a href="#">Contributors tab</a>.
                   </div>
                 </div>
               </div>
@@ -85,7 +97,7 @@
               <div class="mdl-card mdl-cell mdl-cell--12-col">
                 <div class="mdl-card__supporting-text">
                   <h4>Technology</h4>
-                  Legacy server houses some decent specs, check details at technology tab.
+                  Legacy Server houses some decent specs, check details at <a href="#">Technology tab</a>.
                 </div>
               </div>
             </section>
